// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`DnNavbar Tests should render brand without alt 1`] = `
<nav
  class="nav"
>
  <div
    class="nav-left"
  >
    <img
      alt=""
      class="nav-brand"
      src="APP_ROOT/DnNavbar/__stories__/denali-logo.svg"
    />
  </div>
</nav>
`;

exports[`DnNavbar Tests should render default storybook example 1`] = `
<nav
  class="nav"
>
  <div
    class="nav-left"
  >
    <img
      alt="Denali brand"
      class="nav-brand"
      src="APP_ROOT/DnNavbar/__stories__/denali-logo.svg"
    />
  </div>
  <div
    class="nav-responsive"
  >
    <div
      class="nav-center"
    >
      <span
        class="nav-item is-active"
      >
        Three
      </span>
      <span
        class="nav-item"
      >
        Center
      </span>
      <span
        class="nav-item"
      >
        Items
      </span>
    </div>
    <div
      class="nav-right"
    >
      <a
        class="nav-item"
        href="."
      >
        <i
          class="d-icon d-dashboard is-default"
        />
      </a>
      <a
        class="nav-item"
        href="."
      >
        <i
          class="d-icon d-menu-dialpad is-default"
        />
      </a>
      <span
        class="nav-item"
      >
        <i
          class="d-icon d-user-profile-circle is-default"
        />
      </span>
    </div>
  </div>
</nav>
`;

exports[`DnNavbar Tests should render with default props 1`] = `
<nav
  class="nav"
/>
`;
